components/services/zylos-service-catalog/base/cache/cilium-networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: zylos-catalog-valkey-cnp
  namespace: zylos-catalog
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: catalog-valkey
      app.kubernetes.io/name: valkey
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: catalog-valkey
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP

    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: zylos-service-catalog
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: catalog-valkey
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
